@@ -454,8 +454,8 @@
              where = environment(fdef))
 {
     ## to avoid infinite recursion, and somewhat for speed, turn off S4 methods for primitives
-    primMethods <- .allowPrimitiveMethods(FALSE)
-    on.exit(.allowPrimitiveMethods(primMethods))
+    if(.allowPrimitiveMethods(FALSE)) # if it was true, revert on exit
+        on.exit(.allowPrimitiveMethods(TRUE))
     ## classes is a list of the class(x) for each arg in generic
     ## signature, with "missing" for missing args
     if(!is.environment(table)) {
